# rex

./: .gitignore  dune-project  rex.opam
data/: and.csv  and_or_10.csv  and_or_3.csv  and_or_4.csv  and_or_5.csv  and_or_6.csv  and_or_7.csv  and_or_8.csv  and_or_9.csv  or.csv  xor.csv  xor_and_10.csv  xor_and_3.csv  xor_and_4.csv  xor_and_5.csv  xor_and_6.csv  xor_and_7.csv  xor_and_8.csv  xor_and_9.csv  xor_and_xor.csv
lib/: core.ml  dataloader.ml  dune  formatter.ml  partition.ml  utils.ml
test/: dune
